# PlaywrightING

./: .gitignore  Dockerfile  Makefile  README.md  accounts.py  config.py  constants.py  exceptions.py  main.py  page_selectors.py  pying.py  pyproject.toml  sample.env  selectors.py  transactions.py  utils.py
navigation/: login.py  logout.py  transactions.py
playwrighting/: __init__.py  accounts.py  config.py  constants.py  exceptions.py  page_selectors.py  pying.py  transactions.py  utils.py
playwrighting/navigation/: login.py  logout.py  transactions.py
scripts/: download.sh  init.sh  install.sh
