[tool.poetry]
name = "playwrightING"
version = "0.7.0"
description = "Get your ING account data"
authors = ["Pablo Cabezas <headsrooms@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "playwrighting" }
]

[tool.poetry.scripts]
pying = 'playwrighting.pying:cli'

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.11"
12factor-configclasses = "^0.4"
python-dotenv = "^0.15"
selectolax = "^0.2"
more-itertools = "^8.7"
pandas = "^1.2.4"
lxml = "^4.6.3"
html5lib = "^1.1"
beautifulsoup4 = "^4.9"
asyncclick = "^8.0.1"
anyio = "^3.1.0"
tabulate = "^0.8.9"
rich = "^10.2.2"
dateparser = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
